// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OWNS_INTEGRATION_RELATIONSHIP_CONFIGS entityanalytics_entra_id (log-based) targets-per-actor ES|QL is locked 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM logs-entityanalytics_entra_id.device-__namespace__
| WHERE host.id IS NOT NULL
    AND (device.registered_owners.mail IS NOT NULL OR device.registered_owners.id IS NOT NULL OR device.registered_owners.user_principal_name IS NOT NULL)
| EVAL targetEntityId = CONCAT(\\"host:\\", TO_STRING(host.id))
| EVAL mailAndId = CASE(device.registered_owners.mail IS NULL, device.registered_owners.id, device.registered_owners.id IS NULL, device.registered_owners.mail, MV_APPEND(device.registered_owners.mail, device.registered_owners.id))
| EVAL ownerKey = CASE(mailAndId IS NULL, device.registered_owners.user_principal_name, device.registered_owners.user_principal_name IS NULL, mailAndId, MV_APPEND(mailAndId, device.registered_owners.user_principal_name))
| MV_EXPAND ownerKey
| EVAL actorUserId = CONCAT(\\"user:\\", ownerKey, \\"@entra_id\\")
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
    AND actorUserId != \\"user:@entra_id\\"
    AND actorUserId RLIKE \\".+:.+@.+\\"
| STATS owns = VALUES(targetEntityId) BY actorUserId
| LIMIT 3500"
`;

exports[`OWNS_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots entityanalytics_entra_id: targets-per-actor ES|QL is locked (no watermark) 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM logs-entityanalytics_entra_id.device-__namespace__
| WHERE host.id IS NOT NULL
    AND (device.registered_owners.mail IS NOT NULL OR device.registered_owners.id IS NOT NULL OR device.registered_owners.user_principal_name IS NOT NULL)
| EVAL targetEntityId = CONCAT(\\"host:\\", TO_STRING(host.id))
| EVAL mailAndId = CASE(device.registered_owners.mail IS NULL, device.registered_owners.id, device.registered_owners.id IS NULL, device.registered_owners.mail, MV_APPEND(device.registered_owners.mail, device.registered_owners.id))
| EVAL ownerKey = CASE(mailAndId IS NULL, device.registered_owners.user_principal_name, device.registered_owners.user_principal_name IS NULL, mailAndId, MV_APPEND(mailAndId, device.registered_owners.user_principal_name))
| MV_EXPAND ownerKey
| EVAL actorUserId = CONCAT(\\"user:\\", ownerKey, \\"@entra_id\\")
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
    AND actorUserId != \\"user:@entra_id\\"
    AND actorUserId RLIKE \\".+:.+@.+\\"
| STATS owns = VALUES(targetEntityId) BY actorUserId
| LIMIT 3500"
`;

exports[`OWNS_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots entityanalytics_okta: targets-per-actor ES|QL is locked (no watermark) 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM entities-latest-__namespace__
| WHERE (entity.relationships.owns.raw_identifiers.host.id IS NOT NULL)
    AND entity.source == \\"entityanalytics_okta\\"
| EVAL actorUserId = entity.id
| EVAL rawKey0 = entity.relationships.owns.raw_identifiers.host.id
| MV_EXPAND rawKey0
| EVAL t0 = CONCAT(\\"host:\\", rawKey0)
| EVAL targetEntityId = t0
| WHERE COALESCE(targetEntityId, \\"\\") != \\"\\" AND targetEntityId RLIKE \\".+:.+\\"
| STATS owns = VALUES(targetEntityId) BY actorUserId
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
| LIMIT 3500"
`;

exports[`OWNS_INTEGRATION_RELATIONSHIP_CONFIGS golden snapshots entityanalytics_okta: targets-per-actor ES|QL with watermark is locked 1`] = `
"FROM entities-latest-__namespace__
| WHERE (entity.relationships.owns.raw_identifiers.host.id IS NOT NULL)
    AND entity.source == \\"entityanalytics_okta\\"
    AND entity.lifecycle.last_seen > \\"2026-06-01T00:00:00.000Z\\"
| EVAL actorUserId = entity.id
| EVAL rawKey0 = entity.relationships.owns.raw_identifiers.host.id
| MV_EXPAND rawKey0
| EVAL t0 = CONCAT(\\"host:\\", rawKey0)
| EVAL targetEntityId = t0
| WHERE COALESCE(targetEntityId, \\"\\") != \\"\\" AND targetEntityId RLIKE \\".+:.+\\"
| STATS owns = VALUES(targetEntityId) BY actorUserId
| WHERE COALESCE(actorUserId, \\"\\") != \\"\\"
| LIMIT 3500"
`;
